Fixed skip-to-content button on smaller screens

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ a {
 }
 
 .skip-to-content:focus {
-    left: 5%;
+    left: 5rem;
     transform: translateX(-50%);
     opacity: 1;
 }
